Test WIP for file depth changes

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,7 +16,7 @@ systemd_tz: Etc/UTC
 systemd_units:
   - name: systemd-timesyncd
     files:
-      - path: /etc/systemd/timesyncd.conf
+      - path: /etc/systemd/timesyncd.conf.d/timesyncd.conf
         conf:
           Time:
             NTP: 0.pool.ntp.org 1.pool.ntp.org 2.pool.ntp.org 3.pool.ntp.org
