--- a/tasks/file_edited.yml
+++ b/tasks/file_edited.yml
@@ -11,97 +11,77 @@
 - name: Systemd unit file edited
   block:
 
-    - name: Debug systemd_section
-      ansible.builtin.debug:
-        var: systemd_section
-        verbosity: 2
-
-    - name: Debug the systemd_conf_depth variable
-      ansible.builtin.debug:
-        var: systemd_conf_depth
-        verbosity: 2
-
-    - name: Edit file with sections
+    - name: Conditionally set a variable with the list of sections
       block:
 
-        - name: Vim modelines comment absent
-          ansible.builtin.lineinfile:
-            path: "{{ systemd_file.path }}"
-            line: "# vim: ft=systemd:"
-            state: absent
-          when: systemd_section.key not in systemd_file_sections
-
-        - name: Systemd unit file edited
-          community.general.ini_file:
-            path: "{{ systemd_file.path }}"
-            section: "{{ systemd_section.key }}"
-            option: "{{ systemd_variable_pair.key }}"
-            value: "{{ systemd_variable_pair.value }}"
-            no_extra_spaces: true
-            mode: "0644"
-            owner: root
-            group: root
-          loop: "{{ systemd_section.value | ansible.builtin.dict2items }}"
-          loop_control:
-            loop_var: systemd_variable_pair
-          register: systemd_file_edited
-
-        - name: Debug systemd_file_edited variable
-          ansible.builtin.debug:
-            var: systemd_file_edited
-            verbosity: 2
-
-        - name: Set systemd_file_changed if one or more variable in the systemd unit file was edited
+        - name: Set a fact for the existing systemd unit file sections
           ansible.builtin.set_fact:
-            systemd_file_changed: "{{ systemd_file_edited | community.general.json_query('results[].changed') | ansible.builtin.unique | community.general.json_query('[0]') }}"
+            systemd_file_sections: "{{ systemd_file_vars.keys() }}"
 
-        - name: Vim modelines comment present at the end of the file
-          ansible.builtin.lineinfile:
-            path: "{{ systemd_file.path }}"
-            line: "# vim: ft=systemd:"
-            state: present
-            insertafter: EOF
+        - name: Debug the existing systemd unit file sections
+          ansible.builtin.debug:
+            var: systemd_file_sections
+            verbosity: 2
 
       when: systemd_conf_depth == 2
 
-    - name: Edit file without sections
+    - name: Backup copy of the existing systemd unit file present
+      ansible.builtin.copy:
+        src: "{{ systemd_file.path }}"
+        dest: "{{ systemd_file_backup }}"
+        mode: "0644"
+        owner: root
+        group: root
+        remote_src: true
+      when: systemd_file.conf != systemd_file_vars
+
+    - name: Comment block present
       block:
 
-        - name: Debug systemd_section
-          ansible.builtin.debug:
-            var: systemd_section
-            verbosity: 3
-
-        - name: Debug systemd_section type
-          ansible.builtin.debug:
-            msg: "{{ systemd_section | type_debug }}"
-            verbosity: 3
-
-        - name: Debug systemd_section dict2items
-          ansible.builtin.debug:
-            msg: "{{ systemd_section | ansible.builtin.dict2items }}"
-            verbosity: 3
-
-        - name: Systemd unit file edited
-          community.general.ini_file:
+        - name: Ansible managed comment absent from the top of the file
+          ansible.builtin.lineinfile:
             path: "{{ systemd_file.path }}"
-            option: "{{ systemd_variable_pair.key }}"
-            value: "{{ systemd_variable_pair.value }}"
-            section: null
-            no_extra_spaces: true
+            line: "# {{ systemd_ansible_managed }}"
+            state: absent
             mode: "0644"
             owner: root
             group: root
-          loop: "{{ systemd_section | ansible.builtin.dict2items }}"
-          loop_control:
-            loop_var: systemd_variable_pair
-          register: systemd_file_edited
 
-        - name: Set systemd_file_changed if one or more variable in the systemd unit file was edited
-          ansible.builtin.set_fact:
-            systemd_file_changed: "{{ systemd_file_edited | community.general.json_query('results[].changed') | ansible.builtin.unique | community.general.json_query('[0]') }}"
+        - name: Comment present at the top of the systemd unit file
+          ansible.builtin.blockinfile:
+            path: "{{ systemd_file.path }}"
+            block: "{{ systemd_file.comment | ansible.builtin.comment }}"
+            insertbefore: BOF
+            mode: "0644"
+            owner: root
+            group: root
 
+      when:
+        - systemd_file.comment is defined
+        - systemd_file.comment | length > 0
+
+    - name: Ansible managed comment present at the top of the file
+      ansible.builtin.lineinfile:
+        path: "{{ systemd_file.path }}"
+        line: "# {{ systemd_ansible_managed }}"
+        state: present
+        insertbefore: BOF
+        mode: "0644"
+        owner: root
+        group: root
+
+    - name: Include the systemd unit file edited tasks without sections
+      ansible.builtin.include_tasks: file_depth_one_edited.yml
+      vars:
+        systemd_section: "{{ systemd_file.conf }}"
       when: systemd_conf_depth == 1
+
+    - name: Include the systemd unit file edited tasks for sections
+      ansible.builtin.include_tasks: file_depth_two_edited.yml
+      loop: "{{ systemd_file.conf | ansible.builtin.dict2items }}"
+      loop_control:
+        loop_var: systemd_section
+      when: systemd_conf_depth == 2
 
   tags:
     - systemd
