--- a/tasks/checks.yml
+++ b/tasks/checks.yml
@@ -70,14 +70,19 @@
       ansible.builtin.set_fact:
         systemd_unit_files_existing: "{{ systemd_list_unit_files.stdout | community.general.jc('systemctl_luf') }}"
 
+    - name: Debug existing systemd unit files
+      ansible.builtin.debug:
+        var: systemd_unit_files_existing
+        verbosity: 2
+
     - name: Set a fact for the enabled systemd unit files
       ansible.builtin.set_fact:
-        systemd_unit_files_enabled: "{{ systemd_unit_files_existing | community.general.json_query(systemd_unit_files_enabled_query) }}"
+        systemd_unit_files_enabled: "{{ systemd_unit_files_existing | community.general.json_query(systemd_unit_files_enabled_query) | sort }}"
 
     - name: Debug enabled systemd unit files
       ansible.builtin.debug:
         var: systemd_unit_files_enabled
-        verbosity: 2
+        verbosity: 1
 
     # TODO Add checks for systemd_units variables
 
