--- a/tasks/file_absent.yml
+++ b/tasks/file_absent.yml
@@ -25,18 +25,21 @@
       ansible.builtin.systemd:
         service: "{{ systemd_unit.name }}"
         state: restarted
-      when: systemd_file_absent.stat.exists | bool
+      when: systemd_file_state.stat.exists | bool
 
     - name: Systemd unit file absent, backup present
       ansible.builtin.command: "mv {{ systemd_file.path }} {{ systemd_file_backup }}"
       changed_when: true
       register: systemd_file_absent
-      when: systemd_file_absent.stat.exists | bool
+      when: systemd_file_state.stat.exists | bool
 
     - name: Systemd daemon-reload
       ansible.builtin.systemd:
         daemon_reload: true
-      when: systemd_file_absent.changed | true
+      when:
+        - systemd_file_absent is defined
+        - systemd_file_absent.changed is defined
+        - systemd_file_absent.changed | bool
 
     - name: Stat the systemd unit file
       ansible.builtin.stat:
