--- a/tasks/unit_present.yml
+++ b/tasks/unit_present.yml
@@ -20,6 +20,11 @@
         var: systemd_unit
         verbosity: 2
 
+    - name: The systemd_unit variable needs to be defined
+      ansible.builtin.assert:
+        that:
+          - systemd_unit is defined
+
     - name: Include the package install tasks when defined
       ansible.builtin.include_tasks: pkg_present.yml
       loop: "{{ systemd_unit.pkgs }}"
