fix for backports

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -28,7 +28,7 @@
             default_release: "{{ ansible_distribution_release }}-backports"
           when: ( "-backports" in systemd_apt_cache_policy_systemd.stdout )
 
-      when: ansible_distribution_release is ansible.builtin.regex('^buster|bullseye|bookworm$')
+      when: ansible_distribution_release is ansible.builtin.regex(systemd_backport_regex)
 
     # man-db is required by systemd-analyze verify
     - name: Systemd and man-db present
