--- a/meta/argument_specs.yml
+++ b/meta/argument_specs.yml
@@ -18,6 +18,19 @@ argument_specs:
         type: bool
         required: true
         description: Run the tasks in this role.
+      systemd_backport_distros:
+        type: list
+        elements: str
+        required: true
+        description: Internal variable for Debian distros that have backports.
+        choices:
+          - bullseye
+          - bookworm
+          - trixie
+      systemd_backport_regex:
+        type: str
+        required: true
+        description: Internal variable for a regular expression for Debian distros that have backports.
       systemd_delete_broken_symlinks:
         type: bool
         required: true
