--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,17 +8,59 @@
 #
 # You should have received a copy of the GNU General Public License along with the Webarchitects systemd Ansible role. If not, see <https://www.gnu.org/licenses/>.
 ---
-image: registry.git.coop/webarch/containers/images/ansible:0.23.0
 variables:
-  PY_COLORS: "1"
+  ANSIBLE_CALLBACK_RESULT_FORMAT: "yaml"
+  ANSIBLE_DIFF_ALWAYS: "1"
+  ANSIBLE_DISPLAY_SKIPPED_HOSTS: "0"
   ANSIBLE_FORCE_COLOR: "1"
+  ANSIBLE_REMOTE_TMP: "/tmp"
+  ANSIBLE_SHELL_ALLOW_WORLD_READABLE_TEMP: "1"
+  DEBIAN_FRONTEND: noninteractive
+  DEFAULT_MANAGED_STR: "Ansible managed"
+  MOLECULE_VERBOSITY: "0"
+  PRE_COMMIT_COLOR: always
+  PY_COLORS: "1"
 before_script:
+  - whoami
+  - pwd
   - chmod 700 $(pwd)
+  - which ansible
+  - ansible --version
+  - which yamllint
+  - yamllint --version
+  - which molecule
+  - molecule --version
 stages:
-  - lint
-lint:
-  stage: lint
+  - bookworm
+  - jammy
+  - noble
+  - trixie
+bookworm:
+  image: registry.git.coop/webarch/containers/images/bookworm:20240521
+  stage: bookworm
   script:
-    - molecule lint
-# vim: syntax=yaml
+    - pre-commit install
+    - pre-commit run --all-files
+    - molecule test --all
+jammy:
+  image: registry.git.coop/webarch/containers/images/jammy:20240521
+  stage: jammy
+  script:
+    - pre-commit install
+    - pre-commit run --all-files
+    - molecule test --all
+noble:
+  image: registry.git.coop/webarch/containers/images/noble:20240521
+  stage: noble
+  script:
+    - pre-commit install
+    - pre-commit run --all-files
+    - molecule test --all
+trixie:
+  image: registry.git.coop/webarch/containers/images/trixie:20240521
+  stage: trixie
+  script:
+    - pre-commit install
+    - pre-commit run --all-files
+    - molecule test
 ...
