--- a/tasks/timesyncd.yml
+++ b/tasks/timesyncd.yml
@@ -79,6 +79,8 @@
         - name: Set time using systemd and NTP
           ansible.builtin.command: timedatectl set-ntp true
           changed_when: true
+          tags:
+            - molecule-idempotence-notest
 
         - name: Pause for 30 seconds to allow the clock to synchronized
           ansible.builtin.pause:
