--- a/tasks/unit_present.yml
+++ b/tasks/unit_present.yml
@@ -24,6 +24,7 @@
       ansible.builtin.assert:
         that:
           - systemd_unit is defined
+        quiet: "{% if ansible_verbosity == 0 %}true{% else %}false{% endif %}"
 
     - name: Include the package install tasks when defined
       ansible.builtin.include_tasks: pkg_present.yml
@@ -116,7 +117,7 @@
             state: started
           when: >-
             ( systemd_unit.state is not defined ) or
-            ( systemd_unit.state == "enabled" )
+            ( systemd_unit.state != "enabled" )
 
         - name: Systemd unit restarted
           ansible.builtin.systemd:
